--- a/index.html
+++ b/index.html
@@ -283,12 +283,20 @@
 
             <div class="grid   grid-cols-1  md:grid-cols-2 lg:grid-cols-4 gap-5 mx-14 md:mx-8 lg:mx-0 mt-6">
                 <div class="card  bg-base-100 shadow-xl rounded-lg">
-                    <figure class="px-10 pt-10">
+                    <figure class="px-10 pt-10   ">
                         <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
 
                     </figure>
-                    <hr class="w-60 mt-7 mx-auto ">
-                    <div class="card-body items-center text-center space-y-4">
+                    <h1 class="text-xl font-bold
+                    text-center mt-4 ">12.90$ - 18.85$</h1>
+
+
+
+                    <hr class="w-60  mx-auto mt-5 ">
+
+
+
+                    <div class="card-body items-center text-center space-y-3">
                         <h1>Apple</h1>
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -346,7 +354,13 @@
                         <img src="images/fruit7.png" alt="Shoes" class="rounded-xl " />
 
                     </figure>
-                    <hr class="w-60 mt-7 mx-auto ">
+                    <h1 class="text-xl font-bold
+                    text-center mt-4 ">12.90$ - 18.85$</h1>
+
+
+
+                    <hr class="w-60  mx-auto mt-5 ">
+
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Orange</h1>
                         <div class="rating rating-md rating-half">
@@ -405,7 +419,13 @@
                         <img src="images/fruit8.png" alt="Shoes" class="rounded-xl " />
 
                     </figure>
-                    <hr class="w-60 mt-7 mx-auto ">
+                    <h1 class="text-xl font-bold
+                    text-center mt-4 ">12.90$ - 18.85$</h1>
+
+
+
+                    <hr class="w-60  mx-auto mt-5 ">
+
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Red Dragon</h1>
                         <div class="rating rating-md rating-half">
@@ -465,7 +485,13 @@
                         <img src="images/fruit9.png " alt="Shoes " class="rounded-xl " />
 
                     </figure>
-                    <hr class="w-60 mt-7 mx-auto ">
+                    <h1 class="text-xl font-bold
+                    text-center mt-4 ">12.90$ - 18.85$</h1>
+
+
+
+                    <hr class="w-60  mx-auto mt-5 ">
+
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Red Dragon</h1>
                         <div class="rating rating-md rating-half">
