--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
             ;
         }
         
-        .icon i {
-            color: white;
+        @media screen and (max-width:768px) {
+            .box {
+                display: none;
+            }
         }
     </style>
 
     <header>
 
         <!-- navbar -->
-        <div class="container mx-auto ">
+        <div class="container mx-auto mt-3 ">
 
             <div class="navbar mt-0 bg-white md:bg-background-color lg:bg-background-color flex flex-row-reverse   lg:flex-row justify-between md:justify-between  lg:justify-around
              lg:rounded-full py-3   ">
@@ -131,7 +133,7 @@
                 </div>
                 <div class="form-control  hidden lg:block ">
                     <div class="relative">
-                        <input type="text " placeholder="Search " class="  w-80 p-2 outline-none  rounded-full " />
+                        <input type="text " placeholder="Search here " class="  w-80 p-2 outline-none  rounded-full " />
 
                         <div class="absolute right-10 top-2">
                             <i class="fa-solid fa-magnifying-glass text-xl cursor-pointer "></i>
@@ -143,14 +145,17 @@
 
         </div>
         <!-- carousel-->
-        <div class="container  mx-auto mt-4 ">
+
+
+        <div class="container  mx-auto mt-4 relative ">
+
             <div class="flex  justify-center">
-                <div class="carousel mx-2 md:mx-4 lg:m-0 w-full  h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212c7] to-[#000000a5] rounded-lg">
+                <div class="carousel mx-2 md:mx-4 lg:m-0 w-full  h-[200px] md:h-[350px] lg:h-[450px] relative  bg-gradient-to-r from-[#121212b5] to-[#0000009f] rounded-lg">
 
                     <div id="slide1" class="carousel-item relative w-full mix-blend-overlay">
                         <img src="images/banner1.png" class="w-full ">
 
-                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6  ">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-5 ">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -158,7 +163,7 @@
                             <p class=" text-white text-center text-sm md:text-xl lg:text-4xl">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop
-                                    Now</button>
+                                        Now</button>
                             </div>
 
 
@@ -174,7 +179,7 @@
                     </div>
                     <div id="slide2" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner2.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-5">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -182,7 +187,7 @@
                             <p class=" text-white text-center text-sm md:text-xl lg:text-4xl ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop
-                                    Now</button>
+                                        Now</button>
                             </div>
 
 
@@ -202,7 +207,7 @@
 
                     <div id="slide3" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner3.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-5">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -210,7 +215,7 @@
                             <p class=" text-white text-center text-sm md:text-xl lg:text-4xl ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop
-                                    Now</button>
+                                        Now</button>
                             </div>
 
 
@@ -225,7 +230,7 @@
 
                     <div id="slide4" class="carousel-item relative w-full  mix-blend-overlay">
                         <img src="images/banner4.png" class="w-full  " alt="">
-                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-8">
+                        <div class="absolute left-20 top-6 md:left-40  lg:left-80 space-y-3 md:space-y-6 lg:space-y-5">
 
                             <h1 class=" text-2xl md:text-5xl lg:text-7xl text-white font-bold text-center">
                                 Exotic tastes at your <br>doorstep
@@ -233,7 +238,7 @@
                             <p class=" text-white text-center text-sm md:text-xl lg:text-4xl  ">We supply highly quality organic products</p>
                             <div class="flex justify-center">
                                 <button class="btn bg-background-color border-none text-white cursor-pointer">Shop
-                                    Now</button>
+                                        Now</button>
                             </div>
 
 
@@ -250,6 +255,34 @@
                 </div>
 
             </div>
+            <div>
+                <div class="box absolute flex   md:-bottom-0 left-0 lg:-bottom-24  lg:left-48 bg-white shadow-lg  gap-x-11 py-7 px-4 text-center   ">
+
+                    <div><img src="images/fruit1.png" alt="">
+                        <h1>strawberry</h1>
+                    </div>
+                    <div><img src="images/fruit2.png" alt="">
+                        <h1>orange</h1>
+                    </div>
+                    <div><img src="images/fruit3.png" alt="">
+                        <h1>mango</h1>
+                    </div>
+                    <div><img src="images/fruit4.png" alt="">
+                        <h1>strawberry</h1>
+                    </div>
+                    <div><img src="images/fruit5.png" alt="">
+
+                        <h1>Pomegranate</h1>
+                    </div>
+
+
+                </div>
+            </div>
+
+
+
+
+
         </div>
 
 
@@ -258,7 +291,7 @@
     <main>
 
         <!-- deal of the day section -->
-        <div class="container mx-auto mt-12">
+        <div class="container mx-auto mt-16 lg:mt-28">
 
             <div class=" flex flex-col  lg:flex-row items-center justify-center  md:justify-center lg:justify-between space-y-5 ">
                 <div class="">
@@ -933,6 +966,8 @@
 
 
 </body>
+
+</html>
 
 </html>
 
