--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
             ;
         }
         
-        .card {
+        .horigental {
             border: 1px solid rgba(18, 18, 18, 0.10);
-            ;
         }
         
         @media screen and (max-width:768px) {
@@ -339,7 +338,7 @@
 
 
 
-                    <hr class="w-60  mx-auto mt-5 ">
+                    <hr class="w-60  mx-auto mt-5 h-0.5 ">
 
 
 
@@ -406,7 +405,7 @@
 
 
 
-                    <hr class="w-60  mx-auto mt-5 ">
+                    <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Orange</h1>
@@ -471,7 +470,7 @@
 
 
 
-                    <hr class="w-60  mx-auto mt-5 ">
+                    <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Red Dragon</h1>
@@ -537,7 +536,7 @@
 
 
 
-                    <hr class="w-60  mx-auto mt-5 ">
+                    <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
                         <h1>Red Dragon</h1>
@@ -901,6 +900,114 @@
 
         </div>
 
+        <!-- choose section -->
+
+        <div class="container mx-auto">
+            <div class="flex flex-col ">
+
+                <div class="mx-auto ">
+                    <h1 class="text-center">Why Choose Us</h1>
+                    <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+                </div>
+
+                <div class="flex flex-col lg:flex-row justify-center items-center lg:justify-between py-10">
+                    <!-- left side -->
+                    <div class="order-2 md:order-2 lg:order-1">
+
+                        <div class="flex flex-col lg:flex-row  items-center gap-4 ">
+
+                            <div class="bg-gray-400 rounded-full p-3">
+
+                                <img src="images/group 1.png" alt=""></div>
+                            <div class=" space-y-3 relative">
+                                <h1 class="text-2xl font-extrabold text-black  text-center lg:text-left ">Dedicated Team</h1>
+                                <hr class="w-20  bg-black  h-0.5 absolute top-6 left-32 lg:left-0 ">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+                        </div>
+
+
+
+                        <div class="flex flex-col lg:flex-row  items-center gap-4 ">
+
+                            <div class="bg-gray-400 rounded-full p-3">
+
+                                <img src="images/group 1.png" alt=""></div>
+                            <div class=" space-y-3    relative">
+                                <h1 class="text-2xl font-extrabold text-black  text-center lg:text-left ">Dedicated Team</h1>
+                                <hr class="w-20  bg-black  h-0.5 absolute top-6 left-32 lg:left-0 ">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col lg:flex-row  items-center gap-4 ">
+
+                            <div class="bg-gray-400 rounded-full p-3">
+
+                                <img src="images/group 1.png" alt=""></div>
+                            <div class=" space-y-3  relative">
+                                <h1 class="text-2xl font-extrabold text-black  text-center lg:text-left ">Dedicated Team</h1>
+                                <hr class="w-20  bg-black  h-0.5 absolute top-6 left-32 lg:left-0 ">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- center side -->
+                    <div class="order-1 md:order-2 lg::order-2">
+                        <div>
+                            <img src="images/whychoose1.png" alt="" class="h-[320px]"></div>
+
+
+                    </div>
+                    <!-- right side -->
+                    <div class="order-3 md:order-3 lg::order-3">
+
+                        <div class="flex flex-col lg:flex-row-reverse  items-center gap-4">
+                            <div class="bg-gray-400 rounded-full p-3">
+
+                                <img src="images/group 1.png" alt="">
+                            </div>
+                            <div class="space-y-5 relative flex flex-col items-center ">
+                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
+                                <hr class="w-20  bg-black h-0.5 absolute top-4 lg:right-0 ">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+
+                        </div>
+
+
+
+                        <div class="flex flex-col lg:flex-row-reverse items-center gap-4 ">
+                            <div class="bg-gray-400 rounded-full p-3">
+                                <img src="images/love 2.png" alt=""></div>
+                            <div class="space-y-5 relative  flex flex-col items-center">
+                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
+                                <hr class="w-20 bg-black h-0.5 absolute top-4 lg:right-0">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+                        </div>
+                        <div class="flex items-center  flex-col lg:flex-row-reverse gap-4">
+                            <div class="bg-gray-400 rounded-full p-3">
+                                <img src="images/gift-box 3.png" alt=""></div>
+                            <div class="space-y-5 relative flex flex-col items-center ">
+                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
+                                <hr class="w-20 h-0.5 bg-black absolute top-4 lg:right-0">
+                                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer class="footer footer-center p-10 bg-black text-primary-content">
         <div>
@@ -966,6 +1073,8 @@
 
 
 </body>
+
+</html>
 
 </html>
 
