--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
                     <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div>
 
-                <div class="flex flex-col lg:flex-row justify-center items-center lg:justify-between py-10">
+                <div class="flex flex-col lg:flex-row justify-center items-center lg:justify-between py-10 gap-y-8 lg:gap-y-0">
                     <!-- left side -->
                     <div class="order-2 md:order-2 lg:order-1">
 
@@ -933,7 +933,7 @@
 
                             <div class="bg-gray-400 rounded-full p-3">
 
-                                <img src="images/group 1.png" alt=""></div>
+                                <img src="images/love 2.png" alt=""></div>
                             <div class=" space-y-3    relative">
                                 <h1 class="text-2xl font-extrabold text-black  text-center lg:text-left ">Dedicated Team</h1>
                                 <hr class="w-20  bg-black  h-0.5 absolute top-6 left-32 lg:left-0 ">
@@ -945,7 +945,7 @@
 
                             <div class="bg-gray-400 rounded-full p-3">
 
-                                <img src="images/group 1.png" alt=""></div>
+                                <img src="images/gift-box 3.png" alt=""></div>
                             <div class=" space-y-3  relative">
                                 <h1 class="text-2xl font-extrabold text-black  text-center lg:text-left ">Dedicated Team</h1>
                                 <hr class="w-20  bg-black  h-0.5 absolute top-6 left-32 lg:left-0 ">
@@ -968,11 +968,11 @@
                         <div class="flex flex-col lg:flex-row-reverse  items-center gap-4">
                             <div class="bg-gray-400 rounded-full p-3">
 
-                                <img src="images/group 1.png" alt="">
+                                <img src="images/fruit 4.png" alt="">
                             </div>
-                            <div class="space-y-5 relative flex flex-col items-center ">
-                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
-                                <hr class="w-20  bg-black h-0.5 absolute top-4 lg:right-0 ">
+                            <div class="space-y-5 relative  ">
+                                <h1 class="text-2xl font-extrabold text-black text-center lg:text-right">Dedicated Team</h1>
+                                <hr class="w-20  bg-black h-0.5 absolute top-4 right-32  lg:right-0 ">
                                 <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
                             </div>
 
@@ -983,20 +983,20 @@
 
                         <div class="flex flex-col lg:flex-row-reverse items-center gap-4 ">
                             <div class="bg-gray-400 rounded-full p-3">
-                                <img src="images/love 2.png" alt=""></div>
-                            <div class="space-y-5 relative  flex flex-col items-center">
-                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
-                                <hr class="w-20 bg-black h-0.5 absolute top-4 lg:right-0">
+                                <img src="images/ice-cream 5.png" alt=""></div>
+                            <div class="space-y-5 relative  ">
+                                <h1 class="text-2xl font-extrabold text-black text-center lg:text-right">Dedicated Team</h1>
+                                <hr class="w-20 bg-black h-0.5 absolute top-4 right-32 lg:right-0">
                                 <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
                             </div>
 
                         </div>
                         <div class="flex items-center  flex-col lg:flex-row-reverse gap-4">
                             <div class="bg-gray-400 rounded-full p-3">
-                                <img src="images/gift-box 3.png" alt=""></div>
-                            <div class="space-y-5 relative flex flex-col items-center ">
-                                <h1 class="text-2xl font-extrabold text-black text-right">Dedicated Team</h1>
-                                <hr class="w-20 h-0.5 bg-black absolute top-4 lg:right-0">
+                                <img src="images/like 6.png" alt=""></div>
+                            <div class="space-y-5 relative ">
+                                <h1 class="text-2xl font-extrabold text-black text-center lg:text-right">Dedicated Team</h1>
+                                <hr class="w-20 h-0.5 bg-black absolute top-4 right-32 lg:right-0">
                                 <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
                             </div>
 
