--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 
                     <div class="card-body items-center text-center space-y-3">
-                        <h1>Apple</h1>
+                        <h1 class="text-[#12121299]">Apple</h1>
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
                             <input type="radio" name="rating-10" class="bg-full-star-color mask mask-star-2 mask-half-1" />
@@ -362,7 +362,7 @@
                                         <img src="images/fruit6.png" alt="">
                                     </div>
                                     <div class=" space-y-5  mt-2">
-                                        <h1 class="text-2xl font-bold">Apples</h1>
+                                        <h1 class="text-2xl font-bold  ">Apples</h1>
                                         <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
@@ -403,7 +403,7 @@
                     <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
-                        <h1>Orange</h1>
+                        <h1 class="text-[#12121299]">Orange</h1>
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
                             <input type="radio" name="rating-10" class="bg-full-star-color mask mask-star-2 mask-half-1" />
@@ -427,7 +427,7 @@
                                         <img src="images/fruit7.png" alt="">
                                     </div>
                                     <div class=" space-y-5  mt-2">
-                                        <h1 class="text-2xl font-bold">Orange</h1>
+                                        <h1 class="text-2xl font-bold  ">Orange</h1>
                                         <p class="text-sm text-[#12121299]">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
@@ -468,7 +468,7 @@
                     <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
-                        <h1>Red Dragon</h1>
+                        <h1 class="text-[#12121299]">Red Dragon</h1>
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
                             <input type="radio" name="rating-10" class="bg-full-star-color mask mask-star-2 mask-half-1" />
@@ -492,7 +492,7 @@
                                         <img src="images/fruit8.png" alt="">
                                     </div>
                                     <div class=" space-y-5  mt-2">
-                                        <h1 class="text-2xl font-bold">Red Dragon</h1>
+                                        <h1 class="text-2xl font-bold ">Red Dragon</h1>
                                         <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
@@ -534,7 +534,7 @@
                     <hr class="w-60  mx-auto mt-5 h-0.5">
 
                     <div class="card-body items-center text-center space-y-4">
-                        <h1>Red Dragon</h1>
+                        <h1 class="text-[#12121299]">Banana</h1>
                         <div class="rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
                             <input type="radio" name="rating-10" class="bg-full-star-color mask mask-star-2 mask-half-1" />
@@ -558,7 +558,7 @@
                                         <img src="images/fruit9.png" alt="">
                                     </div>
                                     <div class=" space-y-5  mt-2">
-                                        <h1 class="font-bold text-2xl">Banana</h1>
+                                        <h1 class="font-bold text-2xl  ">Banana</h1>
                                         <p class="text-sm text-[#12121299] ">
                                             Professional employees are there for you to pick the most amazing and fresh fruits.
                                         </p>
